Reworked unit-tests + tiny refactoring.